# claw-one

./: .gitattributes.harness  .gitignore  AGENTS.md  Makefile  README.md  RUST_STACK.md  TEST_COVERAGE_REVIEW.md  TEST_FRAMEWORK.md  demo-openclaw.json  deploy.sh  harness.yaml
backend/: Cargo.toml
backend/src/: config.rs  error.rs  main.rs  runtime.rs  settings.rs  state.rs  types.rs  validation.rs
backend/src/api/: config.rs  logs.rs  memory.rs  mod.rs  providers.rs  restart.rs  rollback.rs  snapshots.rs  state.rs
bridge/: .gitignore  Dockerfile.playwright  docker-compose.test.yml  package-lock.json  package.json  playwright.config.ts  vite.config.ts
config/: claw-one.toml.example  openclaw.json.example
dev-config/: openclaw.json
docs/: BUILD_STRATEGY.md  CONFIG_MODULAR_RESEARCH.md  DOCKER-RUN.md  E2E_TEST_PLAN.md  FINAL_DESIGN.md  INDEX.md  README.md  (+9 more)
hull/: Cargo.toml  build.rs
hull/schemas/: memory-config.json
hull/src/: config.rs  error.rs  lib.rs  main.rs  runtime.rs  settings.rs  state.rs  types.rs  validation.rs
hull/src/api/: agents.rs  channels.rs  config.rs  logs.rs  memory.rs  mod.rs  providers.rs  restart.rs  rollback.rs  setup.rs  snapshots.rs  state.rs  status.rs
hull/tests/: api_agents.rs  api_agents_validation.rs  api_all_modules_validation.rs  api_channels.rs  api_config.rs  api_config_persistence.rs  api_error_cases.rs  api_health.rs  api_memory.rs  api_memory_schema.rs  api_memory_validation.rs  api_module_interaction.rs  api_providers.rs  api_status.rs  config_git_test.rs  state_manager_test.rs  test_claude_code_flow.rs  test_exec_demo.rs  test_validation_complex.rs
hull/tests/common/: mod.rs
(+110 files in other folders)
