[package]
name = "claw-one"
version = "0.1.0"
edition = "2021"

[dependencies]
# 异步运行时
tokio = { version = "1.36", features = ["full"] }

# Web 框架
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 错误处理
thiserror = "1.0"
anyhow = "1.0"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# 工具
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
dirs = "5"
fs2 = "0.4"

# 命令行解析
clap = { version = "4.5", features = ["derive"] }
shellexpand = "3.1"

# HTTP 客户端
git2 = "0.18"
reqwest = { version = "0.11", features = ["json"], default-features = false }
async-trait = "0.1"
toml = "0.8"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
